Changed code to use Integer.valueOf() rather than new Integer() as valueOf() is the recommended way of creating an Integer object from an int (see JavaDoc for Integer)
git-svn-id: https://svn.apache.org/repos/asf/tuscany/java/sca@724342 13f79535-47bb-0310-9956-ffa450edef68